kube/base/saleor-payments/payments-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payments-api
  template:
    metadata:
      labels:
        app: payments-api
    spec:
      containers:
        - name: api
          image: k3d-higiliqs.local:12345/dummy-payment-app:0.1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "700m"
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 10
