kube/base/saleor-payments/payments-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: payments-api
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: payments-api
