kube/base/saleor-payments/payments-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payments-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: payments-api.higiliquidos.svc.cluster.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: payments-api
                port:
                  number: 80
